Use a context processor to inject the categories collection into the navbar and sidenav dropdown menus. Build category_pg function to dynamically generate a specific category page depending on user selection in the dropdown menu. Wrap the 'categories' variable in the add and edit definition functions to fix bug.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -57,6 +57,16 @@ nav ul li a:hover {
     color: #030301;
 }
 
+/*---------------------- Nav Dropdown Menu: */
+.dropdown-content li a {
+    background-color: #030301;
+    color: #fffff3;
+}
+
+.dropdown-content li:hover {
+    color: #030301;
+}
+
 /*---------------------- Sidenav: */
 .sidenav .collapsible-header {
     padding: 0 32px;
@@ -65,6 +75,13 @@ nav ul li a:hover {
 .sidenav .fa-caret-down:before {
     font-size: small;
 }
+
+/*---------------------- Sidenav collapsible-accordion: */
+.sidenav .collapsible-body li a {
+    background-color: #030301;
+    color: #fffff3;
+}
+
 
 /*---------------------- Footer: */
 .page-footer {
